# HKBuild

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DESIGN.md  HKBuild.csproj  HKBuild.sln
.github/references/: class_catalog.md  extraction_script.md  vanilla_bug_census.md  verification.md  yaml_schemas.md
lib/HKX2E/HKX2/: HKX2E.csproj  HavokXmlDeserializer.cs
scripts/: convert_all_behaviors.ps1  extract_behavior.ps1
src/: AnimationHkxEmitter.cs  AnimationReader.cs  BehaviorExtractor.cs  BehaviorReader.cs  BehaviorXmlEmitter.cs  CharacterReader.cs  CharacterXmlEmitter.cs  GraphEmitter.cs  HKBuild.csproj  Program.cs  SkeletonReader.cs  SplineAnimCompressor.cs
src/Models/: AnimationDef.cs  BSBoneSwitchGeneratorDef.cs  BSCyclicBlendTransitionGeneratorDef.cs  BSEventEveryNEventsModifierDef.cs  BSIsActiveModifierDef.cs  BSOffsetAnimationGeneratorDef.cs  BSSynchronizedClipGeneratorDef.cs  BSiStateTaggingGeneratorDef.cs  BehaviorDef.cs  BehaviorGraphDataDef.cs  BehaviorReferenceGeneratorDef.cs  BlenderGeneratorDef.cs  BoneIndexArrayDef.cs  BonePresetsDef.cs  CharacterDef.cs  ClipGeneratorDef.cs  EvaluateExpressionModifierDef.cs  EventDrivenModifierDef.cs  EventRangeDataArrayDef.cs  ExpressionDataArrayDef.cs  FootIkControlsModifierDef.cs  FootIkDef.cs  GenericModifierDef.cs  ManualSelectorDef.cs  MirrorDef.cs  ModifierGeneratorDef.cs  ModifierListDef.cs  PoseMatchingGeneratorDef.cs  PropertyDef.cs  SkeletonDef.cs  StateMachineDef.cs  StringEventPayloadDef.cs  TransitionDef.cs
ui/: App.xaml  App.xaml.cs  HKBuildUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
